--- a/APP/IOS/PointExchange/PointExchange/ModifyPasswordView.xib
+++ b/APP/IOS/PointExchange/PointExchange/ModifyPasswordView.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,16 +27,16 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="O5A-h0-A5C">
-                    <rect key="frame" x="70" y="30" width="235" height="372"/>
+                    <rect key="frame" x="63.5" y="30" width="248" height="401.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="修改密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SsC-55-yf4">
-                            <rect key="frame" x="77.5" y="0.0" width="80" height="83.5"/>
+                            <rect key="frame" x="84" y="0.0" width="80" height="90"/>
                             <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
                             <color key="textColor" red="0.4039215686" green="0.38431372549999998" blue="0.38431372549999998" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入旧密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="A2l-Hd-pCI">
-                            <rect key="frame" x="7" y="91.5" width="221" height="40"/>
+                            <rect key="frame" x="7" y="98" width="234" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="p9c-WY-q4g"/>
                             </constraints>
@@ -47,7 +48,7 @@
                             </connections>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请输入新密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="ZNb-g5-l9h">
-                            <rect key="frame" x="7" y="139.5" width="221" height="40"/>
+                            <rect key="frame" x="7" y="146" width="234" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="WQ9-ci-jbA"/>
                             </constraints>
@@ -59,7 +60,7 @@
                             </connections>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" placeholder="请再次输入新密码" textAlignment="center" minimumFontSize="17" background="输入框" translatesAutoresizingMaskIntoConstraints="NO" id="JuR-yT-PBf">
-                            <rect key="frame" x="7" y="187.5" width="221" height="40"/>
+                            <rect key="frame" x="7" y="194" width="234" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="S9E-sL-GaV"/>
                             </constraints>
@@ -71,7 +72,7 @@
                             </connections>
                         </textField>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ih0-ov-Oxj">
-                            <rect key="frame" x="7" y="235.5" width="221" height="136.5"/>
+                            <rect key="frame" x="7" y="242" width="234" height="159.5"/>
                             <state key="normal" image="Button修改密码"/>
                             <connections>
                                 <action selector="modify:" destination="-1" eventType="touchUpInside" id="OGL-dK-hRt"/>
@@ -89,9 +90,8 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="O5A-h0-A5C" secondAttribute="bottom" constant="120" id="5eF-vC-wkD"/>
-                <constraint firstItem="O5A-h0-A5C" firstAttribute="leading" secondItem="eiJ-1h-E2q" secondAttribute="leading" constant="70" id="VIV-5l-BoJ"/>
-                <constraint firstAttribute="trailing" secondItem="O5A-h0-A5C" secondAttribute="trailing" constant="70" id="VLy-QB-Zo2"/>
+                <constraint firstItem="O5A-h0-A5C" firstAttribute="height" secondItem="SAM-dL-psd" secondAttribute="height" multiplier="0.8" id="68d-nq-mCA"/>
+                <constraint firstItem="O5A-h0-A5C" firstAttribute="centerX" secondItem="eiJ-1h-E2q" secondAttribute="centerX" id="QOr-jC-s6s"/>
                 <constraint firstItem="O5A-h0-A5C" firstAttribute="top" secondItem="eiJ-1h-E2q" secondAttribute="top" constant="30" id="bII-Wj-WFP"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
