--- a/APP/IOS/PointExchange/PointExchange/UserSetting.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/UserSetting.storyboard
@@ -41,20 +41,20 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="71g-NN-gal" customClass="GradientView" customModule="PointExchange" customModuleProvider="target">
-                                <rect key="frame" x="8" y="287" width="359" height="128"/>
+                                <rect key="frame" x="8" y="287" width="359" height="130"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="a8z-4N-F9x">
-                                        <rect key="frame" x="4" y="4" width="351" height="120"/>
+                                        <rect key="frame" x="8" y="6" width="343" height="120"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="120" id="0oA-pi-aNG"/>
                                         </constraints>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="bindCell" rowHeight="60" id="wUQ-Sv-0JQ">
-                                                <rect key="frame" x="0.0" y="28" width="351" height="60"/>
+                                                <rect key="frame" x="0.0" y="28" width="343" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wUQ-Sv-0JQ" id="fxy-m6-svs">
-                                                    <rect key="frame" x="0.0" y="0.0" width="318" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="310" height="59.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="绑定花旗账户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD9-T0-GP9">
@@ -72,10 +72,10 @@
                                                 </tableViewCellContentView>
                                             </tableViewCell>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="modifyPasswordCell" rowHeight="60" id="TJs-7W-Wu8">
-                                                <rect key="frame" x="0.0" y="88" width="351" height="60"/>
+                                                <rect key="frame" x="0.0" y="88" width="343" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TJs-7W-Wu8" id="yl2-zw-pUM">
-                                                    <rect key="frame" x="0.0" y="0.0" width="318" height="59.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="310" height="59.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="修改密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h3u-h4-Q8V">
@@ -99,9 +99,9 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="a8z-4N-F9x" secondAttribute="bottom" constant="4" id="0tb-FB-c7T"/>
-                                    <constraint firstAttribute="trailing" secondItem="a8z-4N-F9x" secondAttribute="trailing" constant="4" id="Jdx-9X-Rt3"/>
-                                    <constraint firstItem="a8z-4N-F9x" firstAttribute="top" secondItem="71g-NN-gal" secondAttribute="top" constant="4" id="unR-qx-wpq"/>
-                                    <constraint firstItem="a8z-4N-F9x" firstAttribute="leading" secondItem="71g-NN-gal" secondAttribute="leading" constant="4" id="vZB-9s-6jD"/>
+                                    <constraint firstAttribute="trailing" secondItem="a8z-4N-F9x" secondAttribute="trailing" constant="8" id="Jdx-9X-Rt3"/>
+                                    <constraint firstItem="a8z-4N-F9x" firstAttribute="top" secondItem="71g-NN-gal" secondAttribute="top" constant="6" id="unR-qx-wpq"/>
+                                    <constraint firstItem="a8z-4N-F9x" firstAttribute="leading" secondItem="71g-NN-gal" secondAttribute="leading" constant="8" id="vZB-9s-6jD"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -151,13 +151,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DnA-8N-vAd" customClass="ModifyPasswordView" customModule="PointExchange" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="89" width="375" height="558"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DnA-8N-vAd" customClass="ModifyPasswordView" customModule="PointExchange" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DnA-8N-vAd" firstAttribute="bottom" secondItem="tEl-G7-D8v" secondAttribute="bottom" id="2LX-Vg-hXx"/>
+                            <constraint firstItem="DnA-8N-vAd" firstAttribute="top" secondItem="tEl-G7-D8v" secondAttribute="top" id="2ZU-Ow-bsv"/>
+                            <constraint firstItem="DnA-8N-vAd" firstAttribute="leading" secondItem="tEl-G7-D8v" secondAttribute="leading" id="CBx-wu-lBw"/>
+                            <constraint firstItem="DnA-8N-vAd" firstAttribute="trailing" secondItem="tEl-G7-D8v" secondAttribute="trailing" id="Teo-TI-MFC"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="tEl-G7-D8v"/>
                     </view>
                     <connections>
@@ -166,7 +171,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XAf-zt-fxg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3414" y="-1648"/>
+            <point key="canvasLocation" x="3413.5999999999999" y="-1648.4257871064469"/>
         </scene>
         <!--用户设置相关-->
         <scene sceneID="zIn-1J-uc3">
@@ -192,9 +197,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vfZ-ZH-idC">
-                                <rect key="frame" x="0.0" y="54" width="375" height="613"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vfZ-ZH-idC">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -203,6 +207,12 @@
                             </wkWebView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vfZ-ZH-idC" firstAttribute="trailing" secondItem="ec4-TV-s26" secondAttribute="trailing" id="KzD-uZ-hbq"/>
+                            <constraint firstItem="vfZ-ZH-idC" firstAttribute="top" secondItem="ec4-TV-s26" secondAttribute="top" id="Ntz-fn-Tky"/>
+                            <constraint firstItem="vfZ-ZH-idC" firstAttribute="leading" secondItem="ec4-TV-s26" secondAttribute="leading" id="V5t-k1-sFB"/>
+                            <constraint firstItem="vfZ-ZH-idC" firstAttribute="bottom" secondItem="ec4-TV-s26" secondAttribute="bottom" id="yOu-Fh-hvJ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ec4-TV-s26"/>
                     </view>
                     <connections>
@@ -211,7 +221,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xcZ-K7-um7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4484" y="-2429"/>
+            <point key="canvasLocation" x="4484" y="-2429.2353823088456"/>
         </scene>
     </scenes>
     <resources>
