--- a/APP/IOS/PointExchange/PointExchange/Base.lproj/LaunchScreen.storyboard
+++ b/APP/IOS/PointExchange/PointExchange/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image=" Mediterranean" translatesAutoresizingMaskIntoConstraints="NO" id="3R9-tF-ba6">
-                                <rect key="frame" x="0.0" y="20" width="375" height="283"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch" translatesAutoresizingMaskIntoConstraints="NO" id="Nax-Bw-Pls">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Nax-Bw-Pls" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Eoq-Rt-Yzn"/>
+                            <constraint firstItem="Nax-Bw-Pls" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="ReE-Ie-rf5"/>
+                            <constraint firstItem="Nax-Bw-Pls" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Zjc-vX-Rzo"/>
+                            <constraint firstItem="Nax-Bw-Pls" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="mqP-AT-oL4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -33,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name=" Mediterranean" width="682" height="455"/>
+        <image name="launch" width="1125" height="2001"/>
     </resources>
 </document>
